@@ -5351,4 +5351,5 @@ v0.92.0.11:
   - es-419.yml updated by EuGNosii with PR #4471.
   - API: Add NationPreTownLeaveEvent.
   - Have FlagWar and the Towny conquering feature use the NationPreTownLeaveEvent. 
-  - Remove FlagWar references from NationCommand using existing NationTransactionEvent.
+  - Remove FlagWar references from NationCommand using existing NationPreTransactionEvent.
+  - Remove FlagWar reference from TownCommand's withdraw method using existing TownPreTransactionEvent.
